# validate-assignments-main

./: Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: main.py  runner.py
app/: __main__.py  gen_report.py
db/: db.py
docs/: sequence-diagram.md
docs/assets/: c3.excalidraw
docs/diagrams/: c3.md
